[gd_scene load_steps=2 format=3 uid="uid://v7r7mdr3ywca"]

[ext_resource type="Script" path="res://menus/ReshuffleMenu.gd" id="1_akwr2"]

[node name="ReshuffleMenu" type="PanelContainer"]
visible = false
offset_left = 376.0
offset_top = 294.0
offset_right = 584.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akwr2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ReshuffleTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reshuffle ?"
horizontal_alignment = 1

[node name="ReshuffleButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReshuffleButton" to="." method="_on_reshuffle_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
